[gd_scene load_steps=4 format=3 uid="uid://bvvpj3l6wfxuy"]

[ext_resource type="Script" path="res://app.gd" id="1_x3l7u"]
[ext_resource type="Texture2D" uid="uid://b0aj3uuedleyg" path="res://vectors/menu.svg" id="2_5dqs7"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_f2sgo"]
thickness = 32

[node name="App" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_x3l7u")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Body" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Head" type="PanelContainer" parent="Body"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Body/Head"]
layout_mode = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="Label" type="Label" parent="Body/Head/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Plain and Simple Tasks"
horizontal_alignment = 1

[node name="SideMenuButton" type="TextureButton" parent="Body/Head"]
layout_mode = 2
texture_normal = ExtResource("2_5dqs7")
texture_pressed = ExtResource("2_5dqs7")
texture_hover = ExtResource("2_5dqs7")
texture_disabled = ExtResource("2_5dqs7")
texture_focused = ExtResource("2_5dqs7")
ignore_texture_size = true
stretch_mode = 4

[node name="Scroll" type="ScrollContainer" parent="Body"]
layout_mode = 2
size_flags_vertical = 3

[node name="TaskList" type="VBoxContainer" parent="Body/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TodoList" type="VBoxContainer" parent="Body/Scroll/TaskList"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Body/Scroll/TaskList"]
layout_mode = 2
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxLine_f2sgo")

[node name="Label" type="Label" parent="Body/Scroll/TaskList/HSeparator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Completed Tasks"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DoneList" type="VBoxContainer" parent="Body/Scroll/TaskList"]
layout_mode = 2

[node name="NewTaskButton" type="Button" parent="Body"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 120
text = "New Task"

[connection signal="pressed" from="Body/Head/SideMenuButton" to="." method="_on_side_menu_button_pressed"]
[connection signal="pressed" from="Body/NewTaskButton" to="." method="_on_new_task_button_pressed"]
